--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ p{
   
 }
 
+.boss p:hover{
+  font-size: 30px;
+  font-weight: 500;
+}
+
 button{
   width: 200px;
   height: 60px;
@@ -63,7 +68,7 @@ justify-content: center;
 gap: 100px;
 margin-right: 70px;
 margin-top: 40px;
-position: fixed;
+
 }
 
 header{
